# MonkeyTyper

./: README.md
rsrc/: scores.txt
rsrc/WordsPools/: easy.txt  hard.txt  normal.txt
src/: CMakeLists.txt  Difficulty.h  GameOverMenu.cpp  GameOverMenu.h  GameState.h  Menu.cpp  Menu.h  PauseMenu.cpp  PauseMenu.h  PauseState.h  PlayState.cpp  PlayState.h  QuitMenu.cpp  QuitMenu.h  SettingsMenu.cpp  SettingsMenu.h  StatsObject.cpp  StatsObject.h  TextBox.cpp  TextBox.h  main.cpp
